k8s_Yaml_Dockerfile_Files/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-project
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-test-project
  template:
    metadata:
      labels:
        app: devops-test-project
    spec:
      # Uncomment the following if using a private Docker registry
      imagePullSecrets:
        - name: my-registry-secret  # Reference to your Docker registry secret
      containers:
      - name: devops-test-project
        image: sabdulaq/aul:devops  
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: devops-test-project
  namespace: devops
spec:
  selector:
    app: devops-test-project
  ports:
    - protocol: TCP
      port: 80           # The port that the service exposes
      targetPort: 3000   # The port on which the container listens
  type: NodePort
