k8s_Yaml_Dockerfile_Files/mongo-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: devops
spec:
  serviceName: "mongo"
  replicas: 1  # Consider increasing this if needed for redundancy
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6.0  # Specify a stable version of MongoDB
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: devops
spec:
  clusterIP: None  # Headless service
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
