k8s_Yaml_Dockerfile_Files/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: devops
spec:
  clusterIP: None  # Headless service
  ports:
    - port: 27017
  selector:
    app: mongo
