k8s_Yaml_Dockerfile_Files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-test-project-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Specify the Ingress controller
spec:
  tls:
  - hosts:
    - devops-aul  
    secretName: devops-aul  # Name of the secret containing TLS certificate and key
  rules:
  - host: devops-aul  
    http:
      paths:
      - path: /v1/health/
        pathType: Prefix
        backend:
          service:
            name: devops-test-project  
            port:
              number: 80
      - path: /v1/service-check
        pathType: Prefix
        backend:
          service:
            name: devops-test-project  
            port:
              number: 80
      - path: /v1/message
        pathType: Prefix
        backend:
          service:
            name: devops-test-project  
            port:
              number: 80
